[package]
name = "l1j-rust"
version = "0.1.0"
edition = "2021"
description = "Lineage 1 (3.80c TW) game server written in Rust"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.10"
anyhow = "1"
sha1 = "0.10"
base64 = "0.22"
encoding_rs = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
